@@ -466,6 +466,7 @@ message ChromeConfig {
 
 // Begin of protos/perfetto/config/ftrace/ftrace_config.proto
 
+// Next id: 18.
 message FtraceConfig {
   repeated string ftrace_events = 1;
   repeated string atrace_categories = 2;
@@ -490,12 +491,30 @@ message FtraceConfig {
   // It does not disclose KASLR, symbol addresses are mangled.
   optional bool symbolize_ksyms = 13;
 
+  // When symbolize_ksyms=true, tetermines whether the traced_probes daemon
+  // should keep the symbol map in memory (and reuse it for future tracing
+  // sessions) or clear it (saving memory) and re-create it on each tracing
+  // session (wasting cpu and wall time).
+  // The tradeoff is roughly:
+  //  KSYMS_RETAIN: pay a fixed ~1.2 MB cost after the first trace.
+  //  KSYMS_CLEANUP_ON_STOP: pay a ~300-500ms cost when starting each trace.
+  // Default behavior: KSYMS_CLEANUP_ON_STOP.
+  enum KsymsMemPolicy {
+    KSYMS_UNSPECIFIED = 0;
+    KSYMS_CLEANUP_ON_STOP = 1;
+    KSYMS_RETAIN = 2;
+  }
+  optional KsymsMemPolicy ksyms_mem_policy = 17;
+
   // By default the kernel symbolizer is lazily initialized on a deferred task
   // to reduce ftrace's time-to-start-recording. Unfortunately that makes
   // ksyms integration tests hard. This flag forces the kernel symbolizer to be
   // initialized synchronously on the data source start and hence avoiding
   // timing races in tests.
-  optional bool initialize_ksyms_synchronously_for_testing = 14;
+  // DEPRECATED in v28 / Android U. This is now the default behavior, setting it
+  // to true is a no-op.
+  optional bool initialize_ksyms_synchronously_for_testing = 14
+      [deprecated = true];
 
   // When this boolean is true AND the ftrace_events contains "kmem/rss_stat",
   // this option causes traced_probes to enable the "kmem/rss_stat_throttled"
