@@ -2,6 +2,10 @@ Unreleased:
   Tracing service and probes:
     * Add android.statsd datasource.
     * Removed log spam about sys.trace.traced_started in standalone builds.
+    * Changed kallsyms parsing in traced_probes (ftrace) to be always
+      synchronous (when starting the trace, rather than on the first batch).
+    * Added ksyms_mem_policy = KSYMS_RETAIN_FOREVER config to avoid destroying
+      and re-parsing kallsysm repeatedly in benchmark runs.
   Trace Processor:
     * Deprecate calling NotifyEndOfFile more than once: Flush should instead be
       used for all but the final call.
